<package format="2">
  <name>mctr-132_ros</name>
  <version>1.2.4</version>
  <description>
  This package is for bachelor's thesis of Maros Cerget
  </description>
  <maintainer email="mcerget@gmail.com">Maros Cerget</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-serial</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>  

</package>
